# virt_econ_tt

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 72584ddb92ae_initial.py  9c30b1d60929_add_mock_users.py  d89e71f80d48_add_mock_products.py
src/: celery_app.py  main.py
src/api/: __init__.py  api_router.py
src/api/healtcheck/: __init__.py  schemas.py  views.py
src/api/v1/: __init__.py
src/api/v1/analytics/: schemas.py  service.py  views.py
src/api/v1/idempotency/: schemas.py  views.py
src/api/v1/products/: dependencies.py  schemas.py  service.py  views.py
src/api/v1/products/service/: __init__.py  purchase_product.py  use_product.py
src/api/v1/users/: dependencies.py  schemas.py  service.py  views.py
src/api/v1/users/utils/: caching_transaction.py
src/api/v1/users/utils/decorators/: __init__.py  group_by_quantity.py
src/beat_tasks/: tasks.py
src/core/: config.py  enums.py
src/core/caching/: client.py
src/core/db/: __init__.py  session.py
src/core/db/models/: __init__.py  base.py  inventory.py  product.py  transaction.py  user.py
src/core/enums/: __init__.py  product_type.py  transaction_status.py
src/core/exceptions/: exceptions.py
src/core/models/: product.py  user.py
src/utils/: clear_inventory_cache_task.py  custom_key_builder.py
tests/integration/: conftest.py  test_analytics.py  test_healthcheck.py  test_products.py  test_users.py
tests/unit/: conftest.py  test_products_dependencies.py
