[project]
name = "virt-econ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "fastapi-cache2>=0.2.2",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utc>=0.14.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
python_files = "test_*.py *_test.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"